fix: table overflow

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -497,6 +497,7 @@ pre[class*='language-'] {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
     background-color: var(--accents2);
 }
 
